--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.9.2",
+    "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.68.0"
   },
   "devDependencies": {
